# G4_Channeling_RBS

./: CMakeLists.txt  Hadr06.cc  README.md
channeling/include/: G4Channeling.hh  G4ChannelingECHARM.hh  G4ChannelingMaterialData.hh  G4ChannelingMessenger.hh  G4ChannelingOptrChangeCrossSection.hh  G4ChannelingOptrMultiParticleChangeCrossSection.hh  G4ChannelingTrackData.hh
channeling/src/: G4Channeling.cc  G4ChannelingECHARM.cc  G4ChannelingMaterialData.cc  G4ChannelingMessenger.cc  G4ChannelingOptrChangeCrossSection.cc  G4ChannelingOptrMultiParticleChangeCrossSection.cc  G4ChannelingTrackData.cc
include/: ActionInitialization.hh  Analysis.hh  CrystalDetector.hh  CrystalDetectorHit.hh  DetectorConstruction.hh  DetectorConstructionMessenger.hh  EventAction.hh  ExExChParticleUserInfo.hh  G4ChannelingPhysics.hh  G4EmStandardPhysics_option4_channeling.hh  G4IonParametrisedLossModel_mod.hh  HistoManager.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RBSHelpers.hh  Run.hh  RunAction.hh  SensitiveDetector.hh  SensitiveDetectorHit.hh  StackingAction.hh  StackingMessenger.hh  SteppingAction.hh  SteppingVerbose.hh  TrackingAction.hh  XWrapperContinuousDiscreteProcess.hh  XWrapperDiscreteProcess.hh
src/: ActionInitialization.cc  CrystalDetector.cc  CrystalDetectorHit.cc  DetectorConstruction.cc  DetectorConstructionMessenger.cc  EventAction.cc  ExExChParticleUserInfo.cc  G4ChannelingPhysics.cc  G4EmStandardPhysics_option4_channeling.cc  G4IonParametrisedLossModel_mod.cc  G4ionIonisation_mod.cc  HistoManager.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RBSHelpers.cc  Run.cc  RunAction.cc  SensitiveDetector.cc  SensitiveDetectorHit.cc  StackingAction.cc  StackingMessenger.cc  SteppingAction.cc  SteppingVerbose.cc  TrackingAction.cc  XWrapperContinousDiscreteProcess.cc  XWrapperDiscreteProcess.cc  atima_coefs.txt
